# segment-labeling

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
