[project]
name = "segment-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.3.0",
    "opencv-python>=4.12.0.88",
    "segment-anything",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
